force-app/main/default/objects/Account/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold - (Municipalites or Private school groups)</fullName>
            </value>
            <value>
                <fullName>Silver - (Schools with 1.000 pupils or more)</fullName>
            </value>
            <value>
                <fullName>Bronze - (Schools with 500 - 1.000 pupils)</fullName>
            </value>
            <value>
                <fullName>Other - (Schools with &lt; 500 pupils)</fullName>
            </value>
            <value>
                <fullName>Top Prospect</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Protect &amp; Serve</fullName>
            </value>
            <value>
                <fullName>Target &amp; Pursue</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Kommun</fullName>
            </value>
            <value>
                <fullName>Top-30</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>A - Leading</fullName>
            </value>
            <value>
                <fullName>B - Leading</fullName>
            </value>
            <value>
                <fullName>C - Leading</fullName>
            </value>
            <value>
                <fullName>A-related</fullName>
            </value>
            <value>
                <fullName>B-related</fullName>
            </value>
            <value>
                <fullName>C-related</fullName>
            </value>
            <value>
                <fullName>A-school</fullName>
            </value>
            <value>
                <fullName>B-school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>