force-app/main/default/objects/Account/fields/ValidateEmailsRequired2__c.field-meta.xml
<CustomField>
    <fullName>ValidateEmailsRequired2__c</fullName>
    <formula>IF(OR(
        AND(
        ISPICKVAL(OperatingCompany__c, &apos;Noordhoff&apos;), isProfessional__c = true),
	  ISPICKVAL(OperatingCompany__c, &apos;Noordhoff Zorg&apos;)),
	  false,
	  OR(OrderNotificationEmail__c = null, DigitalActivationEmail__c = null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate EmailsRequired2</label>
    <type>Checkbox</type>
</CustomField>