force-app/main/default/objects/Account/recordTypes/B2B_Educational_Location.recordType-meta.xml
<RecordType>
    <fullName>B2B_Educational_Location</fullName>
    <active>true</active>
    <description>Locations of educational institutions</description>
    <label>B2B Educational - Location</label>
</RecordType>