force-app/main/default/objects/Account/recordTypes/B2bB2cAuthors.recordType-meta.xml
<RecordType>
    <fullName>B2bB2cAuthors</fullName>
    <active>true</active>
    <description>Authors can be either companies or individuals</description>
    <label>B2B/B2C Authors</label>
</RecordType>