force-app/main/default/objects/Account/recordTypes/B2BEducational.recordType-meta.xml
<RecordType>
    <fullName>B2BEducational</fullName>
    <active>true</active>
    <description>Schools, institutions</description>
    <label>B2B Educational</label>
</RecordType>