force-app/main/default/objects/Account/recordTypes/B2BNonEducational.recordType-meta.xml
<RecordType>
    <fullName>B2BNonEducational</fullName>
    <active>true</active>
    <description>Trade partners, bookstores, businesses, tender distributors. Does not include student numbers</description>
    <label>B2B Non Educational</label>
</RecordType>