force-app/main/default/objects/Account/recordTypes/B2BPurchasingGroups.recordType-meta.xml
<RecordType>
    <fullName>B2BPurchasingGroups</fullName>
    <active>true</active>
    <description>Government agencies, municipalities, foundations, etc.</description>
    <label>B2B Purchasing Groups</label>
</RecordType>