force-app/main/default/objects/Account/recordTypes/B2C_Private_Individuals.recordType-meta.xml
<RecordType>
    <fullName>B2C_Private_Individuals</fullName>
    <active>true</active>
    <description>For non domestic customers</description>
    <label>B2C Private Individuals</label>
</RecordType>