force-app/main/default/objects/Account/recordTypes/B2CIndividual.recordType-meta.xml
<RecordType>
    <fullName>B2CIndividual</fullName>
    <active>false</active>
    <label>B2C Individual</label>
</RecordType>