force-app/main/default/objects/Account/validationRules/Billing_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND(
    NOT(AND(ISPICKVAL(OperatingCompany__c, &apos;Noordhoff&apos;), isProfessional__c=false))
    ,NOT(ISBLANK(LastUpdateToAWS__c)),

    NOT($User.ValidationRulesDoNotApply__c = true),
            
    OR(BillingCountry =&apos;Sweden&apos;, BillingCountry =&apos;Netherlands&apos;, BillingCountry =&apos;Belgium&apos;, BillingCountry =&apos;Luxembourg&apos;),
    OR(ISBLANK(BillingStreet),ISBLANK(BillingCity),ISBLANK(BillingCountry),ISBLANK(BillingPostalCode))


),true,false)</errorConditionFormula>
    <errorMessage>The billing address has missing information</errorMessage>
</ValidationRule>